--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,9 +87,9 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.openone.Teleprompter'
+    namespace 'com.himanshu70.Teleprompter'
     defaultConfig {
-        applicationId 'com.openone.Teleprompter'
+        applicationId 'com.himanshu70.Teleprompter'
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
